# components

./: .angular-cli.json  .bazelignore  .bazelrc  .eslintrc.js  .firebaserc  .git-blame-ignore-revs  .gitignore  .nvmrc  .prettierignore  .prettierrc  .pullapprove.yml  .stylelintrc  .stylelintrc.json  .travis.yml  .yarnrc  BUILD.bazel  CHANGELOG.md  CHANGELOG_ARCHIVE.md  CODE_REVIEWS.md  CODING_STANDARDS.md  CONTRIBUTING.md  DEV_ENVIRONMENT.md  FAQ.md  GEMINI.md  GENERATING_DOCS.md  GETTING_STARTED.md  HOW_TO_FORK_FOR_CUSTOM_COMPONENTS.md  LICENSE  MODULE.bazel  PR_DESCRIPTION.md  README.md  RELEASING.md  REPO.bazel  SECURITY.md  WORKSPACE  angular-cli-build.js  angular-tsconfig.json  build-config.js  button-demo-standalone.html  ember-cli-build.js  (+18 more)
docs/: .bazelrc  .eslintrc.json  .nvmrc  .yarnrc.yml  BUILD.bazel  MD2.docx  README.md  WORKSPACE.bazel  angular.json  defs.bzl  firebase.json  karma-custom-launchers.js  karma.conf.js  package.json  pnpm-lock.yaml  scss-theming.md  table-of-contents.md  theming-your-components.md  theming.md  tsconfig.json  tsconfig.spec.json
docs/e2e/: protractor.conf.js
docs/scenes/: BUILD.bazel  karma.conf.js  tsconfig.app.json  tsconfig.spec.json
docs/src/: index.html  main.ts  polyfills.ts  robots.txt  sitemap.xml  styles.scss  test.ts  unregister-service-workers.ts
docs/tools/: audit-docs.js  deploy.sh  lighthouse-audit.mjs
goldens/: BUILD.bazel  size-test.json  size-test.yaml  ts-circular-deps.json
goldens/aria/: index.api.md
goldens/cdk/: index.api.md
goldens/google-maps/: index.api.md
goldens/material/: index.api.md
goldens/youtube-player/: index.api.md
integration/harness-e2e-cli/: .browserslistrc  BUILD.bazel  README.md  angular.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
integration/linker/: BUILD.bazel  link-packages-test.js  link-packages-test.mjs
integration/mdc-migration/: BUILD.bazel  migration-test.bzl  verify-golden.ts
integration/module-tests/: BUILD.bazel  find-all-modules.mts  index.bzl  index.mts  tsconfig.json
integration/ng-add/: BUILD.bazel  _angular.json  karma.conf.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
integration/ng-add-standalone/: BUILD.bazel  README.md  _angular.json  angular.json  karma.conf.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
integration/size-test/: BUILD.bazel  check-size.ts  esbuild.config.mjs  index.bzl  rollup.config.js
integration/ts-compat/: BUILD.bazel  helpers.js  helpers.mjs  import-all-entry-points.bzl  test.mjs
integration/vitest/: BUILD.bazel  angular.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  setup-test-files.mjs  tsconfig.json  tsconfig.spec.json
integration/yarn-pnp-compat/: .browserslistrc  .yarnrc.yml  BUILD.bazel  README.md  angular.json  package.json  tsconfig.json
material.angular.io/: .bazelignore  .bazelrc  .browserslistrc  .eslintrc.json  .firebaserc  .gitignore  .travis.yml  BUILD.bazel  LICENSE  README.md  WORKSPACE.bazel  angular-cli.json  angular.json  bazel-material.angular.io  browser-providers.js  defs.bzl  firebase.json  karma-custom-launchers.js  karma.conf.js  ngsw-manifest.json  package-lock.json  package.json  pnpm-lock.yaml  protractor-prerender.conf.js  protractor.conf.js  tsconfig.app.json  tsconfig.json
material.angular.io/.circleci/: config.yml
material.angular.io/.github/: PULL_REQUEST_TEMPLATE.md
material.angular.io/config/: karma.conf.js  protractor.conf.js
material.angular.io/e2e/: app.e2e-spec.ts  app.po.ts  protractor.conf.js
material.angular.io/scenes/: .eslintrc.json  BUILD.bazel  karma.conf.js  tsconfig.app.json  tsconfig.spec.json
material.angular.io/src/: _app-theme.scss  index.html  main.scss  main.ts  polyfills.ts  styles.scss  test.ts  tsconfig.json  tsconfig.spec.json
material.angular.io/tools/: audit-docs-a11y.js  audit-docs.js  deploy.sh  fetch-assets-local.sh  fetch-assets.sh  highlight-examples.sh  lighthouse-audit.js  lighthouse-audit.mjs  optimize-scene-screenshots.js  stackblitz-example.sh
mio/: .bazelrc  .gitignore  BUILD.bazel  angular.json  defs.bzl  package.json  tsconfig.json
mio/scenes/: BUILD.bazel
mio/src/: robots.txt  styles.scss  unregister-service-workers.ts
mio/tools/: audit-docs.js  lighthouse-audit.js
src/aria/: BUILD.bazel  README.md  config.bzl  package.json  public-api.ts  tsconfig.json  version.ts
src/cdk/: BUILD.bazel  config.bzl  index.ts  package.json  platform.ts  public_api.ts  rollup_globals.bzl  tsconfig-build-tmp.json  tsconfig-build.json  tsconfig-es5.json  tsconfig-tests.json  tsconfig.json  version.ts
src/cdk-experimental/: BUILD.bazel  config.bzl  index.ts  package.json  public-api.ts  tsconfig-build.json  tsconfig-tests.json  tsconfig.json  version.ts
src/components-examples/: BUILD.bazel  config.bzl  example-data.ts  example-module.d.ts  package.json  tsconfig.json
src/dev-app/: BUILD.bazel  _color-api-back-compat.scss  common-classes.css  dev-app-module.ts  dev-app.html  dev-app.ts  esbuild.config.mjs  index.html  main-module.ts  main.ts  package.json  polyfills.ts  rollup-bundles.js  routes.ts  system-config-tmpl.js  system-config.js  system-config.ts  systemjs-bundle.js  theme-m3.scss  theme-token-api.scss  theme.scss  tsconfig-aot.json  (+2 more)
test/: BUILD.bazel  angular-test-init-spec.ts  angular-test.init.ts  bazel-karma-local-config.js  browser-providers.js  browser-providers.ts  karma-browsers.json  karma-saucelabs.conf.js  karma-system-config.js  karma-test-shim.js  karma.conf.js  karma.conf.ts  karma.config.ts  protractor-js.conf.js  protractor.conf.js  remote_browsers.json  tsconfig.json
tools/: BUILD.bazel  angular_material_setup_workspace.bzl  bazel-additional-stamp.mjs  bazel-tools-tsconfig.json  bazel.rc  bazel_stamp_vars.sh  broccoli-ts2dart.ts  create-system-config.bzl  defaults.bzl  defaults2.bzl  ember-cli-build.ts  globals.bzl  inline-resources-tools.js  integration.bzl  multiple-node-versions.patch  rebase-pr.js  sass_bundle.bzl  sass_bundle.ts  system-config-tmpl.js  system-rxjs-operators.js  tsconfig-test.json  tsconfig.json
(+11344 files in other folders)
