"""Rules/toolchains for components with Bazel."""

module(
    name = "components",
)

bazel_dep(name = "yq.bzl", version = "0.3.6")
bazel_dep(name = "rules_nodejs", version = "6.7.4")
bazel_dep(name = "aspect_rules_js", version = "3.2.2")
bazel_dep(name = "rules_pkg", version = "1.2.0")
bazel_dep(name = "tar.bzl", version = "0.10.5")
bazel_dep(name = "bazel_lib", version = "3.3.1")
bazel_dep(name = "aspect_rules_esbuild", version = "0.26.0")
bazel_dep(name = "aspect_rules_jasmine", version = "2.0.4")
bazel_dep(name = "platforms", version = "1.1.0")
bazel_dep(name = "aspect_rules_ts", version = "3.8.11")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "rules_browsers")
git_override(
    module_name = "rules_browsers",
    commit = "f61cc5a47b3ec4891e644ffdfa3d7517b81d11dd",
    remote = "https://github.com/angular/rules_browsers.git",
)

bazel_dep(name = "rules_sass")
git_override(
    module_name = "rules_sass",
    commit = "80d35e584df2fc9bd540bfc92082383289a842e7",
    remote = "https://github.com/angular/rules_sass.git",
)

bazel_dep(name = "rules_angular")
git_override(
    module_name = "rules_angular",
    commit = "4025fae590e5c1a48eaa289e20ab54e401d0a396",
    remote = "https://github.com/angular/rules_angular.git",
)

bazel_dep(name = "devinfra")
git_override(
    module_name = "devinfra",
    commit = "ab0dc25e660b6704fb1144f0a62786776575b55d",
    remote = "https://github.com/angular/dev-infra.git",
)

yq = use_extension("@yq.bzl//yq:extensions.bzl", "yq")
use_repo(yq, "yq_toolchains")

rules_ts_ext = use_extension("@aspect_rules_ts//ts:extensions.bzl", "ext")
rules_ts_ext.deps(
    name = "components_npm_typescript",
    # Obtained by: curl --silent https://registry.npmjs.org/typescript/6.0.2 | jq -r '.dist.integrity'
    ts_integrity = "sha512-bGdAIrZ0wiGDo5l8c++HWtbaNCWTS4UTv7RaTH/ThVIgjkveJt83m74bBHMJkuCbslY8ixgLBVZJIOiQlQTjfQ==",
    ts_version = "6.0.2",
)
use_repo(rules_ts_ext, **{"npm_typescript": "components_npm_typescript"})

node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")
node.toolchain(
    node_repositories = {
        "22.23.0-darwin_arm64": ("node-v22.23.0-darwin-arm64.tar.gz", "node-v22.23.0-darwin-arm64", "e0f383a215dd3093de6d2c74f87056dc2306a2e09ad494cbffdba28f89046f56"),
        "22.23.0-darwin_amd64": ("node-v22.23.0-darwin-x64.tar.gz", "node-v22.23.0-darwin-x64", "dc2ccab261fd70c347e4cc52085d8d226f471ccba1fc2a7252283949b31ca9f9"),
        "22.23.0-linux_arm64": ("node-v22.23.0-linux-arm64.tar.xz", "node-v22.23.0-linux-arm64", "4018815ac1bed4f18208901bbde524fee881253b591ee7bc952660e69bd057af"),
        "22.23.0-linux_ppc64le": ("node-v22.23.0-linux-ppc64le.tar.xz", "node-v22.23.0-linux-ppc64le", "864760dde36a03bf0da8f74b511c41a31adae4f50284a20066518775269539aa"),
        "22.23.0-linux_s390x": ("node-v22.23.0-linux-s390x.tar.xz", "node-v22.23.0-linux-s390x", "8c5ba195dff6c11a292ffbe199931c7b52d3f233d25fa908718b99d0e0f9d09d"),
        "22.23.0-linux_amd64": ("node-v22.23.0-linux-x64.tar.xz", "node-v22.23.0-linux-x64", "14d7de44f235534799f8b171a4050d9a6a4bc99c87e053a25d3d54afa580aa20"),
        "22.23.0-windows_amd64": ("node-v22.23.0-win-x64.zip", "node-v22.23.0-win-x64", "425a5bd68cc95e8eb16bcccd0a75081b48983fc6a26f67126bd4d6c7198231e8"),
    },
    node_version = "22.23.0",
)
use_repo(node, "nodejs_toolchains")

pnpm = use_extension("@aspect_rules_js//npm:extensions.bzl", "pnpm")
pnpm.pnpm(
    name = "pnpm",
    pnpm_version = "10.34.4",
    pnpm_version_integrity = "sha512-h2i+VSAK4/Iia2Un/Momh+FLxOXxLXchoPJdo99HkVF3BYZI20F3uvNIEg+guidS2NjZP2vq8f5krhjajelhrw==",
)
use_repo(pnpm, "pnpm")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")
npm.npm_translate_lock(
    name = "npm",
    custom_postinstalls = {
        "@angular/common": "node ../../@nginfra/angular-linking/index.mjs",
        "@angular/forms": "node ../../@nginfra/angular-linking/index.mjs",
        "@angular/localize": "node ../../@nginfra/angular-linking/index.mjs",
        "@angular/platform-browser": "node ../../@nginfra/angular-linking/index.mjs",
        "@angular/platform-server": "node ../../@nginfra/angular-linking/index.mjs",
        "@angular/router": "node ../../@nginfra/angular-linking/index.mjs",
    },
    data = [
        "//:package.json",
        "//:pnpm-workspace.yaml",
        "//integration:package.json",
        "//src/aria:package.json",
        "//src/cdk:package.json",
        "//src/cdk-experimental:package.json",
        "//src/components-examples:package.json",
        "//src/dev-app:package.json",
        "//src/e2e-app:package.json",
        "//src/google-maps:package.json",
        "//src/material:package.json",
        "//src/material-date-fns-adapter:package.json",
        "//src/material-experimental:package.json",
        "//src/material-luxon-adapter:package.json",
        "//src/material-moment-adapter:package.json",
        "//src/universal-app:package.json",
        "//src/youtube-player:package.json",
    ],
    npmrc = "//:.npmrc",
    package_visibility = {
        "@angular/aria": [
            "//integration:__subpackages__",
            "//docs:__subpackages__",
            "//src/components-examples:__subpackages__",
            "//src/dev-app:__subpackages__",
        ],
        "@angular/cdk": [
            "//docs:__subpackages__",
            "//integration:__subpackages__",
            "//src/aria:__subpackages__",
            "//src/cdk-experimental:__subpackages__",
            "//src/components-examples:__subpackages__",
            "//src/dev-app:__subpackages__",
            "//src/material-experimental:__subpackages__",
            "//src/material:__subpackages__",
            "//src/e2e-app:__subpackages__",
        ],
        "@angular/cdk-experimental": [
            "//docs:__subpackages__",
            "//integration:__subpackages__",
            "//src/components-examples:__subpackages__",
            "//src/dev-app:__subpackages__",
            "//src/material-experimental:__subpackages__",
            "//src/e2e-app:__subpackages__",
        ],
        "@angular/material": [
            "//docs:__subpackages__",
            "//integration:__subpackages__",
            "//src/components-examples:__subpackages__",
            "//src/dev-app:__subpackages__",
            "//src/material-experimental:__subpackages__",
            "//src/material-moment-adapter:__subpackages__",
            "//src/e2e-app:__subpackages__",
        ],
        "@angular/material-experimental": [
            "//integration:__subpackages__",
            "//docs:__subpackages__",
            "//src/components-examples:__subpackages__",
            "//src/dev-app:__subpackages__",
        ],
        "@angular/google-maps": [
            "//integration:__subpackages__",
            "//docs:__subpackages__",
            "//src/dev-app:__subpackages__",
        ],
        "@angular/youtube-player": [
            "//integration:__subpackages__",
            "//docs:__subpackages__",
            "//src/dev-app:__subpackages__",
        ],
        "@angular/material-moment-adapter": [
            "//integration:__subpackages__",
            "//docs:__subpackages__",
        ],
        "@angular/material-date-fns-adapter": [
            "//integration:__subpackages__",
            "//docs:__subpackages__",
        ],
        "@angular/material-luxon-adapter": [
            "//integration:__subpackages__",
            "//docs:__subpackages__",
            "//src/components-examples:__subpackages__",
        ],
    },
    pnpm_lock = "//:pnpm-lock.yaml",
)
use_repo(npm, "npm")

rules_angular = use_extension("@rules_angular//setup:extensions.bzl", "rules_angular")
rules_angular.setup(
    name = "components_rules_angular_configurable_deps",
    angular_compiler_cli = "//:node_modules/@angular/compiler-cli",
    typescript = "//:node_modules/typescript",
)
use_repo(rules_angular, **{"rules_angular_configurable_deps": "components_rules_angular_configurable_deps"})
