"""Rules/toolchains for components with Bazel."""

module(
    name = "components",
)

bazel_dep(name = "yq.bzl", version = "0.3.6")
bazel_dep(name = "rules_nodejs", version = "6.7.5")
bazel_dep(name = "aspect_rules_js", version = "3.2.2")
bazel_dep(name = "rules_pkg", version = "1.2.0")
bazel_dep(name = "tar.bzl", version = "0.10.5")
bazel_dep(name = "bazel_lib", version = "3.4.0")
bazel_dep(name = "aspect_rules_esbuild", version = "0.26.0")
bazel_dep(name = "aspect_rules_jasmine", version = "2.0.4")
bazel_dep(name = "platforms", version = "1.1.0")
bazel_dep(name = "aspect_rules_ts", version = "3.8.11")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "rules_browsers")
git_override(
    module_name = "rules_browsers",
    commit = "3e4c46ba62680f930069afc087a29eb9d1214687",
    remote = "https://github.com/angular/rules_browsers.git",
)

bazel_dep(name = "rules_sass")
git_override(
    module_name = "rules_sass",
    commit = "80d35e584df2fc9bd540bfc92082383289a842e7",
    remote = "https://github.com/angular/rules_sass.git",
)

bazel_dep(name = "rules_angular")
git_override(
    module_name = "rules_angular",
    commit = "123c921ec779a4af9bba8d7760425fda3b301c1c",
    remote = "https://github.com/angular/rules_angular.git",
)

bazel_dep(name = "devinfra")
git_override(
    module_name = "devinfra",
    commit = "a24ba1915bf7051430d9c3f349ad9a176eb0d104",
    remote = "https://github.com/angular/dev-infra.git",
)

yq = use_extension("@yq.bzl//yq:extensions.bzl", "yq")
use_repo(yq, "yq_toolchains")

rules_ts_ext = use_extension("@aspect_rules_ts//ts:extensions.bzl", "ext")
rules_ts_ext.deps(
    name = "components_npm_typescript",
    # Obtained by: curl --silent https://registry.npmjs.org/typescript/6.0.2 | jq -r '.dist.integrity'
    ts_integrity = "sha512-bGdAIrZ0wiGDo5l8c++HWtbaNCWTS4UTv7RaTH/ThVIgjkveJt83m74bBHMJkuCbslY8ixgLBVZJIOiQlQTjfQ==",
    ts_version = "6.0.2",
)
use_repo(rules_ts_ext, **{"npm_typescript": "components_npm_typescript"})

node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")
node.toolchain(
    node_repositories = {
        "22.23.1-darwin_arm64": ("node-v22.23.1-darwin-arm64.tar.gz", "node-v22.23.1-darwin-arm64", "ef28d8fab2c0e4314522d4bb1b7173270aa3937e93b92cb7de79c112ac1fa953"),
        "22.23.1-darwin_amd64": ("node-v22.23.1-darwin-x64.tar.gz", "node-v22.23.1-darwin-x64", "b8da981b8a0b1241b70249204916da76c63573ddf5814dbd2d1e41069105cb81"),
        "22.23.1-linux_arm64": ("node-v22.23.1-linux-arm64.tar.xz", "node-v22.23.1-linux-arm64", "0294e8b915ab75f92c7513d2fcb830ae06e10684e6c603e99a87dbf8835389c1"),
        "22.23.1-linux_ppc64le": ("node-v22.23.1-linux-ppc64le.tar.xz", "node-v22.23.1-linux-ppc64le", "a645bcb7bbc498d09ba9249b5c6414aa6d0a461d8854afc61e32096646ba5e66"),
        "22.23.1-linux_s390x": ("node-v22.23.1-linux-s390x.tar.xz", "node-v22.23.1-linux-s390x", "f16b5636ba925b462e627c5e0ef47de3255bf4a7b38d56db58e2cf165df19c3c"),
        "22.23.1-linux_amd64": ("node-v22.23.1-linux-x64.tar.xz", "node-v22.23.1-linux-x64", "9749e988f437343b7fa832c69ded82a312e41a03116d766797ac14f6f9eee578"),
        "22.23.1-windows_amd64": ("node-v22.23.1-win-x64.zip", "node-v22.23.1-win-x64", "7df0bc9375723f4a86b3aa1b7cc73342423d9677a8df4538aca31a049e309c29"),
    },
    node_version = "22.23.1",
)
use_repo(node, "nodejs_toolchains")

pnpm = use_extension("@aspect_rules_js//npm:extensions.bzl", "pnpm")
pnpm.pnpm(
    name = "pnpm",
    pnpm_version = "11.9.0",
    pnpm_version_integrity = "sha512-vWgtXQP+Ul73yf1ngMaITR51asTJyf4AxTh4KCQxDc+Q493E9Tg18G3669UIXkGFXgvLs7YN4qxburieUDbwOw==",
)
use_repo(pnpm, "pnpm")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")
npm.npm_translate_lock(
    name = "npm",
    custom_postinstalls = {
        "@angular/common": "node ../../@nginfra/angular-linking/index.mjs",
        "@angular/forms": "node ../../@nginfra/angular-linking/index.mjs",
        "@angular/localize": "node ../../@nginfra/angular-linking/index.mjs",
        "@angular/platform-browser": "node ../../@nginfra/angular-linking/index.mjs",
        "@angular/platform-server": "node ../../@nginfra/angular-linking/index.mjs",
        "@angular/router": "node ../../@nginfra/angular-linking/index.mjs",
    },
    data = [
        "//:package.json",
        "//:pnpm-workspace.yaml",
        "//integration:package.json",
        "//src/aria:package.json",
        "//src/cdk:package.json",
        "//src/cdk-experimental:package.json",
        "//src/components-examples:package.json",
        "//src/dev-app:package.json",
        "//src/e2e-app:package.json",
        "//src/google-maps:package.json",
        "//src/material:package.json",
        "//src/material-date-fns-adapter:package.json",
        "//src/material-experimental:package.json",
        "//src/material-luxon-adapter:package.json",
        "//src/material-moment-adapter:package.json",
        "//src/universal-app:package.json",
        "//src/youtube-player:package.json",
    ],
    package_visibility = {
        "@angular/aria": [
            "//integration:__subpackages__",
            "//docs:__subpackages__",
            "//src/components-examples:__subpackages__",
            "//src/dev-app:__subpackages__",
        ],
        "@angular/cdk": [
            "//docs:__subpackages__",
            "//integration:__subpackages__",
            "//src/aria:__subpackages__",
            "//src/cdk-experimental:__subpackages__",
            "//src/components-examples:__subpackages__",
            "//src/dev-app:__subpackages__",
            "//src/material-experimental:__subpackages__",
            "//src/material:__subpackages__",
            "//src/e2e-app:__subpackages__",
        ],
        "@angular/cdk-experimental": [
            "//docs:__subpackages__",
            "//integration:__subpackages__",
            "//src/components-examples:__subpackages__",
            "//src/dev-app:__subpackages__",
            "//src/material-experimental:__subpackages__",
            "//src/e2e-app:__subpackages__",
        ],
        "@angular/material": [
            "//docs:__subpackages__",
            "//integration:__subpackages__",
            "//src/components-examples:__subpackages__",
            "//src/dev-app:__subpackages__",
            "//src/material-experimental:__subpackages__",
            "//src/material-moment-adapter:__subpackages__",
            "//src/e2e-app:__subpackages__",
        ],
        "@angular/material-experimental": [
            "//integration:__subpackages__",
            "//docs:__subpackages__",
            "//src/components-examples:__subpackages__",
            "//src/dev-app:__subpackages__",
        ],
        "@angular/google-maps": [
            "//integration:__subpackages__",
            "//docs:__subpackages__",
            "//src/dev-app:__subpackages__",
        ],
        "@angular/youtube-player": [
            "//integration:__subpackages__",
            "//docs:__subpackages__",
            "//src/dev-app:__subpackages__",
        ],
        "@angular/material-moment-adapter": [
            "//integration:__subpackages__",
            "//docs:__subpackages__",
        ],
        "@angular/material-date-fns-adapter": [
            "//integration:__subpackages__",
            "//docs:__subpackages__",
            "//src/components-examples:__subpackages__",
        ],
        "@angular/material-luxon-adapter": [
            "//integration:__subpackages__",
            "//docs:__subpackages__",
            "//src/components-examples:__subpackages__",
        ],
    },
    pnpm_lock = "//:pnpm-lock.yaml",
)
use_repo(npm, "npm")

rules_angular = use_extension("@rules_angular//setup:extensions.bzl", "rules_angular")
rules_angular.setup(
    name = "components_rules_angular_configurable_deps",
    angular_compiler_cli = "//:node_modules/@angular/compiler-cli",
    typescript = "//:node_modules/typescript",
)
use_repo(rules_angular, **{"rules_angular_configurable_deps": "components_rules_angular_configurable_deps"})
